--- a/src/pages/Genres/styles.module.scss
+++ b/src/pages/Genres/styles.module.scss
@@ -50,4 +50,62 @@
     position: relative;
     overflow: hidden;
     transition: transform .3s ease;
+
+    &:hover {
+        .genres_name {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+
+    .figure {
+        background-color: rgba(44, 44, 44, 0.5);
+        position: relative;
+        width: 100%;
+        height: 0;
+        padding-top: 150%;
+        overflow: hidden;
+        transition: transform 0.3s ease-in-out 0s;
+    }
+
+    .picture {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    span {
+        width: 100%;
+        height: 100%;
+    }
+
+    img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.genres_name {
+    font-size: 18px;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s ease;
+
+    @media (max-width: 768px) {
+        font-size: 16px;
+        opacity: 1;
+        visibility: visible;
+    }
 }
